// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select matches snapshot for errorText: errorText mount 1`] = `
.emotion-13 {
  margin-bottom: 20px;
}

@media only screen and (min-width:641px) {
  .emotion-13 {
    margin-bottom: 30px;
  }
}

.emotion-11 {
  margin-bottom: 0;
  margin-bottom: 20px;
}

@media only screen and (min-width:641px) {
  .emotion-11 {
    margin-bottom: 0;
  }
}

@media only screen and (min-width:641px) {
  .emotion-11 {
    margin-bottom: 30px;
  }
}

.emotion-1 {
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    margin-bottom: 0;
  }
}

.emotion-0 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-0 {
    font-size: 19px;
    line-height: 1.3;
  }
}

@media only screen and (min-width:641px) {
  .emotion-0 {
    margin-bottom: 0;
  }
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
  border-left: 4px solid #b10e1e;
  margin-right: 15px;
  padding-left: 10px;
  margin-bottom: 0;
  margin-bottom: 20px;
}

.emotion-10:after {
  content: '';
  display: table;
  clear: both;
}

@media only screen and (min-width:641px) {
  .emotion-10 {
    margin-bottom: 0;
  }
}

@media only screen and (min-width:641px) {
  .emotion-10 {
    margin-bottom: 30px;
  }
}

.emotion-3 {
  display: block;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  color: #6f777b;
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    font-size: 19px;
    line-height: 1.3;
  }
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    margin-bottom: 0;
  }
}

.emotion-6 {
  display: block;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  color: #b10e1e;
  padding-top: 4px;
  padding-bottom: 2px;
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-6 {
    font-size: 19px;
    line-height: 1.3;
  }
}

@media only screen and (min-width:641px) {
  .emotion-6 {
    margin-bottom: 0;
  }
}

.emotion-9 {
  box-sizing: border-box;
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  height: 33px;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
  border: 4px solid #b10e1e;
}

@media only screen and (min-width:641px) {
  .emotion-9 {
    width: 50%;
    height: 38px;
    font-size: 19px;
    line-height: 1.31579;
  }
}

.emotion-9:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

<Styled(Select)
  errorText="example"
  hint="example"
  label="example"
  meta={
    Object {
      "error": "example",
      "touched": true,
    }
  }
>
  <Select
    className="emotion-13"
    errorText="example"
    hint="example"
    input={Object {}}
    label="example"
    meta={
      Object {
        "error": "example",
        "touched": true,
      }
    }
  >
    <Styled(Label)
      className="emotion-13"
      error="example"
      errorText="example"
    >
      <Label
        className="emotion-11"
        error="example"
        errorText="example"
      >
        <Styled(label)
          className="emotion-11"
          error="example"
          errorText="example"
        >
          <label
            className="emotion-10"
          >
            <Styled(LabelText)>
              <LabelText
                className="emotion-1"
              >
                <Styled(span)
                  className="emotion-1"
                >
                  <span
                    className="emotion-0"
                  >
                    example
                  </span>
                </Styled(span)>
              </LabelText>
            </Styled(LabelText)>
            <Styled(HintText)>
              <HintText
                className="emotion-1"
              >
                <Styled(span)
                  className="emotion-1"
                >
                  <span
                    className="emotion-3"
                  >
                    example
                  </span>
                </Styled(span)>
              </HintText>
            </Styled(HintText)>
            <Styled(ErrorText)>
              <ErrorText
                className="emotion-1"
              >
                <Styled(span)
                  className="emotion-1"
                >
                  <span
                    className="emotion-6"
                  >
                    example
                  </span>
                </Styled(span)>
              </ErrorText>
            </Styled(ErrorText)>
            <Styled(select)
              error="example"
            >
              <select
                className="emotion-9"
              >
                example
              </select>
            </Styled(select)>
          </label>
        </Styled(label)>
      </Label>
    </Styled(Label)>
  </Select>
</Styled(Select)>
`;

exports[`Select matches snapshot: enzyme.mount 1`] = `
.emotion-7 {
  margin-bottom: 20px;
}

@media only screen and (min-width:641px) {
  .emotion-7 {
    margin-bottom: 30px;
  }
}

.emotion-5 {
  margin-bottom: 0;
  margin-bottom: 20px;
}

@media only screen and (min-width:641px) {
  .emotion-5 {
    margin-bottom: 0;
  }
}

@media only screen and (min-width:641px) {
  .emotion-5 {
    margin-bottom: 30px;
  }
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
  margin-bottom: 0;
  margin-bottom: 20px;
}

.emotion-4:after {
  content: '';
  display: table;
  clear: both;
}

@media only screen and (min-width:641px) {
  .emotion-4 {
    margin-bottom: 0;
  }
}

@media only screen and (min-width:641px) {
  .emotion-4 {
    margin-bottom: 30px;
  }
}

.emotion-1 {
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    margin-bottom: 0;
  }
}

.emotion-0 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-0 {
    font-size: 19px;
    line-height: 1.3;
  }
}

@media only screen and (min-width:641px) {
  .emotion-0 {
    margin-bottom: 0;
  }
}

.emotion-3 {
  box-sizing: border-box;
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  height: 33px;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    width: 50%;
    height: 38px;
    font-size: 19px;
    line-height: 1.31579;
  }
}

.emotion-3:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

<Styled(Select)
  label="example"
>
  <Select
    className="emotion-7"
    input={Object {}}
    label="example"
    meta={Object {}}
  >
    <Styled(Label)
      className="emotion-7"
    >
      <Label
        className="emotion-5"
      >
        <Styled(label)
          className="emotion-5"
        >
          <label
            className="emotion-4"
          >
            <Styled(LabelText)>
              <LabelText
                className="emotion-1"
              >
                <Styled(span)
                  className="emotion-1"
                >
                  <span
                    className="emotion-0"
                  >
                    example
                  </span>
                </Styled(span)>
              </LabelText>
            </Styled(LabelText)>
            <Styled(select)>
              <select
                className="emotion-3"
              >
                example
              </select>
            </Styled(select)>
          </label>
        </Styled(label)>
      </Label>
    </Styled(Label)>
  </Select>
</Styled(Select)>
`;
